--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,22 @@ COLORS
 teal - #0fb9b1;
 frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
-red - #ee5253
+red - #ee5253 */
 
-*/
+body {
+    margin: 0;
+    padding: 0;
+    background-image: url(/Users/emaleepoellot/mod1/whats-for-dinner/assets/burger-friends.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh
+}
+
+.inline-block-left-side {
+    display: inline;
+    background-color: rgba(225, 225, 225, .9);
+    height: 100px;
+    width: 100px;
+}
 
