--- a/styles.css
+++ b/styles.css
@@ -28,18 +28,39 @@ body {
     height: 100%;
 }
 
-.inline-block-right-side,
 .inline-block-left-side {
     box-sizing: border-box;
     display: inline-block;
     vertical-align: top;
     background-color: rgba(225, 225, 225, .9);
-    padding: 20px;
+    padding: 20;
+    margin: 50px;
     border-radius: 10px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
     text-align: left;
     border-radius: 0;
-    width: calc(50% - 20px)
+    width: 500px;
+    height: 300px
+}
+
+.inline-block-right-side {
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: middle;
+    background-color: rgba(225, 225, 225, .9);
+    padding: 20;
+    margin: 50px;
+    border-radius: 10px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+    text-align: center;
+    border-radius: 0;
+    width: 500px;
+    height: 300px
+}
+
+.cookpotImage {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 
@@ -48,7 +69,7 @@ h1 {
 }
 
 h2 {
-    font-size: 50px
+    font-size: 20px
 }
 
 #letsCook {
