--- a/styles.css
+++ b/styles.css
@@ -21,46 +21,36 @@ body {
     height: 100vh
 }
 
-.choice-selection-container {
+.two-boxes-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
 }
 
-.inline-block-left-side {
-    box-sizing: border-box;
-    display: inline-block;
+.inline-block {
+    flex: 1;
     vertical-align: top;
     background-color: rgba(225, 225, 225, .9);
     padding: 20;
     margin: 50px;
     border-radius: 10px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
     text-align: left;
     border-radius: 0;
-    width: 500px;
+    width: 900px;
     height: 300px
 }
 
-.inline-block-right-side {
-    box-sizing: border-box;
-    display: inline-block;
-    vertical-align: middle;
-    background-color: rgba(225, 225, 225, .9);
-    padding: 20;
-    margin: 50px;
-    border-radius: 10px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
-    text-align: center;
-    border-radius: 0;
-    width: 500px;
-    height: 300px
+.hidden {
+    display: none;
 }
+
 
 .cookpotImage {
+    z-index: 1;
     max-width: 100%;
-    max-height: 100%;
+    align-self: center;
 }
 
 
