--- a/styles.css
+++ b/styles.css
@@ -20,38 +20,44 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh
 }
 
 .two-boxes-container {
-    display: flex;
+    display: flex;  
+    /*  ^centers the two boxes on the page */
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     height: 100%;
 }
 
-.inline-block {
+.container {
     flex: 1;
-    vertical-align: top;
+    align-items: center;
+    /* vertical-align: center; this didn't do anything when I got rid of it */
     justify-content: center;
     background-color: rgba(225, 225, 225, .9);
     padding: 2%;
-    margin: 2%;
+    margin: 12%;
     border-radius: 0;
-    text-align: left;
+    text-align: left center;
     width: 100%;
+}
+
+.cookpot-container {
+    display: flex;
 }
 
 .hidden {
     display: none;
-    font-family: 'Roboto', sans-serif;
 }
 
 
 .cookpotImage {
-    max-width: 100%;
-    height: auto;
-    align-self: center;
+    width: 150px;
+    height: 300px;
+    align-items: center;
+    padding: 30%;
+    align-content: center;
 }
 
 
@@ -69,7 +75,7 @@ h1 {
     display: inline-block;
     font-size: 20px;
     padding: 20px;
-    border-radius: 10px
+    border-radius: 10px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -79,6 +85,13 @@ label {
 }
 
 #dishResult {
+    display: flex;
+    align-items: center;
+    text-align: center; 
     font-family: 'Roboto', sans-serif;
-    font-size: 20px
+    font-size: 40px
+}
+
+#youShouldMake {
+    font-style: italic;
 }
