--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ header {
     font-family: 'Roboto', sans-serif;
 }
 
+.red-asterick {
+    color: red;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -24,8 +28,7 @@ body {
 
 .two-boxes-container {
     display: flex;  
-    /*  ^centers the two boxes on the page */
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: stretch;
     height: 100%;
 }
@@ -33,18 +36,20 @@ body {
 .container {
     flex: 1;
     align-items: center;
-    /* vertical-align: center; this didn't do anything when I got rid of it */
     justify-content: center;
     background-color: rgba(225, 225, 225, .9);
     padding: 2%;
-    margin: 12%;
+    margin: 10%;
     border-radius: 0;
     text-align: left center;
-    width: 100%;
+    width: 35%;
+    height: 35%;
 }
 
 .cookpot-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hidden {
@@ -74,7 +79,8 @@ h1 {
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
-    padding: 20px;
+    padding: 16px;
+    width: 200px;
     border-radius: 10px;
     font-family: 'Roboto', sans-serif;
 }
@@ -85,7 +91,6 @@ label {
 }
 
 #dishResult {
-    display: flex;
     align-items: center;
     text-align: center; 
     font-family: 'Roboto', sans-serif;
